# satz-lifetime-diagnostics

./: .gitignore  CITATION.cff  LICENSE  README.md  THEORY.md  migrate.py  pyproject.toml
data/processed/: beta_vertical_stacks.csv  frozen_law_phase1.json  lifetimes_clean.csv  logft_audit.csv  satz_tableI_isotope_masses.csv
data/raw/logft/: ensdf_logft.csv
experiments/: 01_ingest_satz_pdf_tableI.py  01b_scan_satz_pdf_for_halflife.py  02_scaling_baselines.py  02a_satz_tableI_sanity.py  02b_satz_G_band_diagnostics.py  03_ingest_beta_csv.py  04_beta_structure_diagnostics.py  05_beta_residual_diagnostics.py  06_beta_Q_plus_G_diagnostics.py  07_beta_Q_plus_G_plus_F_diagnostics.py  08_ingest_logft.py  09_beta_Q_G_logft_diagnostics.py  10_blind_test_validation.py  11_sr_stack_frozen_validation.py  20_phase2_promise_probe.py
src/features/: phase_space.py
src/ingest/: normalize_halflife.py
tests/: test_smoke_runs.py
tools/: refactor_g_to_g_satz.py
