[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satz-lifetime-diagnostics"
version = "0.1.0"
description = "Satz Lifetime Diagnostics: frozen universal hazard law for beta/EC lifetimes with channel-aware validation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "A. R. Wells", email = "arwells.research@proton.me"}
]
keywords = ["nuclear-physics", "beta-decay", "half-life", "ENSDF", "logft", "phase-space"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]